src/objects/Case_Product__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ProductCaseAssociation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Junction_Code__c</fullName>
        <label>Junction Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>ProductCaseAssociation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Product</label>
    <nameField>
        <displayFormat>PCA-{00000}</displayFormat>
        <label>Case Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>